projects/rhodes.akn/src/apps/pocket-id/security/network-policy.allow-from-ingress-gateway.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    policy.networking.k8s.io/description: |
      Allows the Cilium Gateway API to route traffic to the Pocket ID application.
      Traffic proxied by Cilium Gateway API carries the reserved:ingress identity,
      as per https://docs.cilium.io/en/latest/security/policy/layer3/#entities-based
  name: allow-pocket-id-from-ingress-gateway
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: pocket-id
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "1411"
              protocol: TCP
