projects/rhodes.akn/src/apps/pocket-id/security/network-policy.allow-intra-namespace.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    policy.networking.k8s.io/description: |
      Permits intra-namespace communication in the pocket-id namespace.
  name: allow-intra-namespace
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: pocket-id
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: pocket-id
