projects/rhodes.akn/src/apps/pocket-id/security/network-policy.allow-pocket-id-from-newt.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    policy.networking.k8s.io/description: |
      Allows Newt to route traffic to the Pocket ID application.
  name: allow-pocket-id-from-newt
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: pocket-id
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: newt-system
            app.kubernetes.io/name: newt
      toPorts:
        - ports:
            - port: "1411"
              protocol: TCP
